manifest/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: production
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.4.7
        ports:
        - containerPort: 3306
        args: ['--mysql-native-password=ON']
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 1000m
            memory: 2Gi
          limits:
            cpu: 2000m
            memory: 4Gi
        volumeMounts:
        - name: mysql-data
          mountPath: /var/lib/mysql
        - name: mysql-seed
          mountPath: /docker-entrypoint-initdb.d
      volumes:
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql-pvc
      - name: mysql-seed
        configMap:
          name: mysql-seed
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: production
spec:
  ports:
  - port: 3306
    name: mysql
    targetPort: 3306
  selector:
    app: mysql
  type: ClusterIP
---
